45-py-on-azure-pt1/modules/networking/00-vnet.tf
resource "azurerm_virtual_network" "main" {
  name                = "vnet-${var.project_name}"
  address_space       = var.vnet_address_space
  location            = var.location
  resource_group_name = var.resource_group_name
  tags                = var.tags
}
